--- a/index.html
+++ b/index.html
@@ -1,10 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>ha</title>
+    <h2>How do you reach us?</h2>
 </head>
+<style>
+    table, th, td
+    {
+        border: 1px solid black;
+        border-collapse: collapse;
+    }
+</style>
 <body>
-hallo
+
+<table>
+    <tr>
+        <td>Campus</td>
+        <td>Campus</td>
+        <td>Study areas</td>
+        <td>Phone number</td>
+        <td>Fax</td>
+        <td>Email</td>
+        <td>Website</td>
+    </tr>
+    <tr>
+        <td rowspan="4">Kortrijk</td>
+        <td rowspan="4">Doorniksesteenweg<br>145<br>8500 Kortrijk<br></td>
+        <td>Commercial<br>Sciences,<br>Business<br>Management<br>and<br>Informatics<br></td>
+        <td>+32 56 26 41 80</td>
+        <td>+32 56 21 58 02</td>
+        <td><a href = "mailto: hwb.kortrijk@vives.be">hwb.kortrijk@vives.be</a></td>
+        <td><a href="https://www.vives.be/nl/handelswetenschappen-en-bedrijfskunde" noreferrer">HW&B</a></td>
+    </tr>
+    <tr>
+        <td>Health care</td>
+        <td>+32 56 26 41 10</td>
+        <td>+32 51 26 41 50</td>
+        <td><a href = "mailto: gez.kortrijk@vives.be">gez.kortrijk@vives.be</a></td>
+        <td><a href="https://www.vives.be/nl/gezondheidszorg" noreferrer">Gezondheidszorg</a></td>
+    </tr>
+    <tr>
+        <td>Applied<br>Social Studies<br></td>
+        <td>+32 51 26 41 50</td>
+        <td>+32 51 26 41 50</td>
+        <td><a href = "mailto: saw.kortrijk@vives.be">saw.kortrijk@vives.be</a></td>
+        <td><a href="https://www.vives.be/nl/sociaal-agogisch-werk" noreferrer">SAW</a></td>
+    </tr>
+    <tr>
+        <td>Applied<br>Engineering<br>and<br>technology<br></td>
+        <td>+32 51 26 41 50</td>
+        <td>+32 51 26 41 50</td>
+        <td><a href = "mailto: iwt.kortrijk@vives.be">iwt.kortrijk@vives.be</a></td>
+        <td><a href="https://www.vives.be/nl/technology" noreferrer">IW&T</a></td>
+    </tr>
+    <tr>
+        <td>Roeselare</td>
+        <td>Wilgenstraat 32<br>8800 Roeselare<br></td>
+        <td>Biotechnology</td>
+        <td>+32 51 26 41 50</td>
+        <td>+32 51 26 41 50</td>
+        <td><a href = "mailto: bio.kortrijk@vives.be">bio.kortrijk@vives.be</a></td>
+        <td><a href="https://www.vives.be/nl/biotechniek" noreferrer">BIO</a></td>
+    </tr>
+    <tr>
+        <td>Torhout</td>
+        <td>Sint-Jozefstraat 1<br>8820 Torhout</td>
+        <td>Education</td>
+        <td>+32 51 26 41 50</td>
+        <td>+32 51 26 41 50</td>
+        <td><a href = "mailto: ond.kortrijk@vives.be">ond.kortrijk@vives.be</a></td>
+        <td><a href="https://www.vives.be/nl/onderwijs" noreferrer">Onderwijs</a></td>
+    </tr>
+</table>
+
+<head>
+    <h1>Abdurachman</h1>
+</head>
+
+<body>
+<h3>Personal information section</h3>
+<p>Abdurachman Tchopalov</p>
+<p>Duitslandstraat 222 8800 Roeselare</p>
+<p>+3204612806</p>
+<p>computermuis@howest.be</p>
+<img src="images\foto.jpg" alt="Ik" width="100px">
+<h3>Hobbies</h3>
+<dl>
+    <dt>Listening to music</dt>
+    <dd>- I don't have a specific taste</dd>
+    <dd><a href="https://open.spotify.com/">Spotify</a></dd>
+    <dt>Reading</dt>
+    <dd>- Different genres</dd>
+    <dd><a href="https://roeselare.bibliotheek.be/">Bibliotheek</a></dd>
+    <dt>Riding public transport</dt>
+    <dd>- I like it so much that I take it everyday</dd>
+    <dd><a href="https://www.belgiantrain.be/nl">NMBS</a></dd>
+</dl>
+<h3>Likes</h3>
+<dl>
+    <dt>Caravan palace</dt>
+    <dd><img src="images\caravan.jpg" alt="Caravan palace" width="100px"></dd>
+    <dd><a href="https://www.caravanpalace.com/">Website</a></dd>
+    <dt>Interstellar</dt>
+    <dd><img src="images\inter.jpg" alt="Interstellar" width="100px"></dd>
+    <dd><a href="https://nl.wikipedia.org/wiki/Interstellar">Website</a></dd>
+</dl>
 </body>
+</html>
+
+<head>
+    <p>Hogeschool VIVES</p>
+</head>
+
+<body>
+<p>De Katholieke Hogeschool VIVES is actief in zes studiegebieden:</p>
+<ol>
+    <li>Biotechniek</li>
+    <li>Gezondheidszorg</li>
+    <li>Handelswetenschappen en bedrijfskunde - informatica</li>
+    <li>Industriële wetenschappen en technologie</li>
+    <li>Onderswijs</li>
+    <li>Sociaal-agogisch werk</li>
+</ol>
+<p>Aan het studiegebied Handelswetenschappen en bedrijfskunde kan je volgende professionele bachelor diploma&#39s behalen:</p>
+
+<ul>
+    <li>Toegepaste informatica</li>
+    <ol>
+        <li>Applicatie-ontwikkeling</li>
+        <ul>
+            <li list-style-type="disc">Apps & gamification</li>
+            <li list-style-type="disc">Networks & cybersecurity</li>
+            <li list-style-type="disc">AI</li>
+        </ul>
+        <li>Softwaremanagement</li>
+        <ul>
+            <li list-style-type="disc">Business & IT</li>
+        </ul>
+    </ol>
+</ul>
+<ul>
+    <li>Bedrijfsmanagement</li>
+    <ol>
+        <li>Accountancy-Fiscaliteit</li>
+        <li>Automotive management</li>
+        <li>Business Management & Entrepreneurship</li>
+        <li>Eventmanagement</li>
+        <li>Financie- en verzekeringswezen</li>
+        <li>Marketing - specialisatie Retail- & storemanagement</li>
+    </ol>
+</ul>
+<ul>
+    <li>Office management</li>
+    <ol>
+        <li>Management assistant</li>
+        <li>HR officer</li>
+        <li>Medical office manager</li>
+    </ol>
+</ul>
+<dl>
+    <dt>Definitie van Ohm</dt>
+    <dd>De Ohm is een afgeleide SI-eenheid. Ze is afgeleid van Amp&#232re en Watt. Ze wordt genoteerd met de griekse hoofdletter Omega (&#937). Door een onderdeel met een weerstand van 1 Ohm zal bij een spanning van 1 Volt een stroom van 1 Amp&#232re vloeien.</dd>
+</dl>
+<p>© 2023</p>
+</body>
+
 </html>
