--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<p><a href="labo_3\contact\index.html">contact</a></p>
-<p><a href="labo_3\homepage\index.html">homepage</a></p>
-<p><a href="labo_3\opleidingsaanbod\index.html">opleidingsaanbod</a></p>
+<p><a href="labo_3\index.html">contact</a></p>
+<p><a href="labo_4\index.html">homepage</a></p>
 
 </body>
 </html>
