--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<p><a href="labo_3\index.html">contact</a></p>
-<p><a href="labo_4\index.html">homepage</a></p>
+<p><a href="labo_3\index.html">labo_3</a></p>
+<p><a href="labo_4\index.html">labo_4</a></p>
 
 </body>
 </html>
