--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<p><a href="labo_3\index.html">labo_3</a></p>
-<p><a href="labo_4\index.html">labo_4</a></p>
+<a href="labo_3/index.html">labo 3</a>
+<br>
+<a href="labo_4/index.html">labo 4</a>
 
 </body>
 </html>
