--- a/labo_3/contact/index.html
+++ b/labo_3/contact/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <h2>How do you reach us?</h2>
+    <meta charset="UTF-8">
+    <title>contact</title>
+    <style>
+        table {
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid black;
+        }
+    </style>
 </head>
-<style>
-    table, th, td
-    {
-        border: 1px solid black;
-        border-collapse: collapse;
-    }
-</style>
-<body>
 
+<body>
+<h2>How do you reach us?</h2>
 <table>
     <tr>
         <td>Campus</td>
@@ -28,29 +31,29 @@
         <td>Commercial<br>Sciences,<br>Business<br>Management<br>and<br>Informatics<br></td>
         <td>+32 56 26 41 80</td>
         <td>+32 56 21 58 02</td>
-        <td><a href = "mailto: hwb.kortrijk@vives.be">hwb.kortrijk@vives.be</a></td>
-        <td><a href="https://www.vives.be/nl/handelswetenschappen-en-bedrijfskunde" noreferrer">HW&B</a></td>
+        <td><a href = "mailto:hwb.kortrijk@vives.be">hwb.kortrijk@vives.be</a></td>
+        <td><a href="https://www.vives.be/nl/handelswetenschappen-en-bedrijfskunde">HW&B</a></td>
     </tr>
     <tr>
         <td>Health care</td>
         <td>+32 56 26 41 10</td>
         <td>+32 51 26 41 50</td>
-        <td><a href = "mailto: gez.kortrijk@vives.be">gez.kortrijk@vives.be</a></td>
-        <td><a href="https://www.vives.be/nl/gezondheidszorg" noreferrer">Gezondheidszorg</a></td>
+        <td><a href = "mailto:gez.kortrijk@vives.be">gez.kortrijk@vives.be</a></td>
+        <td><a href="https://www.vives.be/nl/gezondheidszorg">Gezondheidszorg</a></td>
     </tr>
     <tr>
         <td>Applied<br>Social Studies<br></td>
         <td>+32 51 26 41 50</td>
         <td>+32 51 26 41 50</td>
-        <td><a href = "mailto: saw.kortrijk@vives.be">saw.kortrijk@vives.be</a></td>
-        <td><a href="https://www.vives.be/nl/sociaal-agogisch-werk" noreferrer">SAW</a></td>
+        <td><a href = "mailto:saw.kortrijk@vives.be">saw.kortrijk@vives.be</a></td>
+        <td><a href="https://www.vives.be/nl/sociaal-agogisch-werk">SAW</a></td>
     </tr>
     <tr>
         <td>Applied<br>Engineering<br>and<br>technology<br></td>
         <td>+32 51 26 41 50</td>
         <td>+32 51 26 41 50</td>
-        <td><a href = "mailto: iwt.kortrijk@vives.be">iwt.kortrijk@vives.be</a></td>
-        <td><a href="https://www.vives.be/nl/technology" noreferrer">IW&T</a></td>
+        <td><a href = "mailto:iwt.kortrijk@vives.be">iwt.kortrijk@vives.be</a></td>
+        <td><a href="https://www.vives.be/nl/technology">IW&T</a></td>
     </tr>
     <tr>
         <td>Roeselare</td>
@@ -58,8 +61,8 @@
         <td>Biotechnology</td>
         <td>+32 51 26 41 50</td>
         <td>+32 51 26 41 50</td>
-        <td><a href = "mailto: bio.kortrijk@vives.be">bio.kortrijk@vives.be</a></td>
-        <td><a href="https://www.vives.be/nl/biotechniek" noreferrer">BIO</a></td>
+        <td><a href = "mailto:bio.kortrijk@vives.be">bio.kortrijk@vives.be</a></td>
+        <td><a href="https://www.vives.be/nl/biotechniek">BIO</a></td>
     </tr>
     <tr>
         <td>Torhout</td>
@@ -67,7 +70,9 @@
         <td>Education</td>
         <td>+32 51 26 41 50</td>
         <td>+32 51 26 41 50</td>
-        <td><a href = "mailto: ond.kortrijk@vives.be">ond.kortrijk@vives.be</a></td>
-        <td><a href="https://www.vives.be/nl/onderwijs" noreferrer">Onderwijs</a></td>
+        <td><a href = "mailto:ond.kortrijk@vives.be">ond.kortrijk@vives.be</a></td>
+        <td><a href="https://www.vives.be/nl/onderwijs">Onderwijs</a></td>
     </tr>
 </table>
+</body>
+</html>
