--- a/labo_3/index.html
+++ b/labo_3/index.html
@@ -5,9 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-<p><a href="contact\index.html">contact</a></p>
-<p><a href="homepage\index.html">homepage</a></p>
-<p><a href="opleidingsaanbod\index.html">opleidingsaanbod</a></p>
+<a href="contact/index.html">contact</a>
+<br>
+<a href="homepage/index.html">homepage</a>
+<br>
+<a href="opleidingsaanbod/index.html">opleidingsaanbod</a>
 
 </body>
 </html>
