--- a/labo_3/opleidingsaanbod/index.html
+++ b/labo_3/opleidingsaanbod/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <p>Hogeschool VIVES</p>
+    <meta charset="UTF-8">
+    <title>Opleidingaanbod</title>
 </head>
 
 <body>
-<p>De Katholieke Hogeschool VIVES is actief in zes studiegebieden:</p>
+<a>Hogeschool VIVES</a>
+<br>
+<a>De Katholieke Hogeschool VIVES is actief in zes studiegebieden:</a>
 <ol>
     <li>Biotechniek</li>
     <li>Gezondheidszorg</li>
@@ -14,47 +17,47 @@
     <li>Onderswijs</li>
     <li>Sociaal-agogisch werk</li>
 </ol>
-<p>Aan het studiegebied Handelswetenschappen en bedrijfskunde kan je volgende professionele bachelor diploma&#39s behalen:</p>
+<a>Aan het studiegebied Handelswetenschappen en bedrijfskunde kan je volgende professionele bachelor diploma's behalen:</a>
 
 <ul>
-    <li>Toegepaste informatica</li>
-    <ol>
-        <li>Applicatie-ontwikkeling</li>
-        <ul>
-            <li list-style-type="disc">Apps & gamification</li>
-            <li list-style-type="disc">Networks & cybersecurity</li>
-            <li list-style-type="disc">AI</li>
-        </ul>
-        <li>Softwaremanagement</li>
-        <ul>
-            <li list-style-type="disc">Business & IT</li>
-        </ul>
-    </ol>
+    <li>Toegepaste informatica
+        <ol>
+            <li>Applicatie-ontwikkeling
+                <ul>
+                    <li>Apps & gamification</li>
+                    <li>Networks & cybersecurity</li>
+                    <li>AI</li>
+                </ul>
+            <li>Softwaremanagement
+                <ul>
+                    <li>Business & IT</li>
+                </ul>
+        </ol>
+    </li>
+    <li>Bedrijfsmanagement
+        <ol>
+            <li>Accountancy-Fiscaliteit</li>
+            <li>Automotive management</li>
+            <li>Business Management & Entrepreneurship</li>
+            <li>Eventmanagement</li>
+            <li>Financie- en verzekeringswezen</li>
+            <li>Marketing - specialisatie Retail- & storemanagement</li>
+        </ol>
+    </li>
+    <li>Office management
+        <ol>
+            <li>Management assistant</li>
+            <li>HR officer</li>
+            <li>Medical office manager</li>
+        </ol>
+    </li>
 </ul>
-<ul>
-    <li>Bedrijfsmanagement</li>
-    <ol>
-        <li>Accountancy-Fiscaliteit</li>
-        <li>Automotive management</li>
-        <li>Business Management & Entrepreneurship</li>
-        <li>Eventmanagement</li>
-        <li>Financie- en verzekeringswezen</li>
-        <li>Marketing - specialisatie Retail- & storemanagement</li>
-    </ol>
-</ul>
-<ul>
-    <li>Office management</li>
-    <ol>
-        <li>Management assistant</li>
-        <li>HR officer</li>
-        <li>Medical office manager</li>
-    </ol>
-</ul>
+
 <dl>
     <dt>Definitie van Ohm</dt>
-    <dd>De Ohm is een afgeleide SI-eenheid. Ze is afgeleid van Amp&#232re en Watt. Ze wordt genoteerd met de griekse hoofdletter Omega (&#937). Door een onderdeel met een weerstand van 1 Ohm zal bij een spanning van 1 Volt een stroom van 1 Amp&#232re vloeien.</dd>
+    <dd>De Ohm is een afgeleide SI-eenheid. Ze is afgeleid van Ampère en Watt. Ze wordt genoteerd met de griekse hoofdletter Omega (Ω). Door een onderdeel met een weerstand van 1 Ohm zal bij een spanning van 1 Volt een stroom van 1 Ampère vloeien.</dd>
 </dl>
-<p>© 2023</p>
+<a>© 2023</a>
 </body>
 
 </html>
