--- a/labo_4/opdracht_1.html
+++ b/labo_4/opdracht_1.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Opdracht 1</title>
+    <h2>Opdracht 1</h2>
 </head>
 <body>
-
+    <h4>Zoek op wat lossy en lossless compression is en geef een beschrijving van beiden.</h4>
+    <a>Bij lossless compression blijft elk stuk van de gegevens die oorspronkelijk in een bestand zaten, behouden nadat het is gedecomprimeerd, en wordt alle informatie hersteld. Lossy compression verkleint een bestand door bepaalde informatie, vooral overbodige informatie, permanent te verwijderen.</a>
+    <h4>Welke soort compression gebruiken de jpeg, png en gif formaten?</h4>
+    <a>JPEG's gebruiken lossy compression, PNG's en GIF's lossless compression</a>
+    <h4>Wat zou er gebeuren als je een afbeelding herhaaldelijk bewerkt en bewaart in een lossy formaat?</h4>
+    <a>Dan zou die afbeelding een slechtere beeldkwaliteit hebben door gegevensverlies</a>
 </body>
 </html>
