--- a/labo_4/opdracht_2.html
+++ b/labo_4/opdracht_2.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Opdracht 2</title>
+    <h2>Opdracht 2</h2>
 </head>
 <body>
-
+<h4>Ga naar imagecompressor.com en upload een afbeelding. Vergelijk quality 90, 70 en 4O</h4>
+<a>Originele afbeelding: 187 KB, Quality 90: 138 KB, Quality 70: 62 KB, Quality 40: 37 KB</a>
+<a>Beeldkwaliteit wordt steeds slechter. Details worden vager</a>
+<h4>Probeer nu met een screenshot van Webstorm. Wat valt je op?</h4>
+<a>De tekst wordt minder leesbaar. Kleuren veranderen ook.</a>
 </body>
 </html>
