--- a/labo_3/homepage/index.html
+++ b/labo_3/homepage/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <h1>Abdurachman</h1>
+    <meta charset="UTF-8">
+    <title>Homepage</title>
 </head>
 
 <body>
+<h1>Abdurachman</h1>
 <h3>Personal information section</h3>
 <p>Abdurachman Tchopalov</p>
 <p>Duitslandstraat 222 8800 Roeselare</p>
 <p>+3204612806</p>
 <p>computermuis@howest.be</p>
-<img src="images\foto.jpg" alt="Ik" width="100px">
+<img src="images/foto.jpg" alt="Ik" width="100">
 <h3>Hobbies</h3>
 <dl>
     <dt>Listening to music</dt>
@@ -26,10 +28,10 @@
 <h3>Likes</h3>
 <dl>
     <dt>Caravan palace</dt>
-    <dd><img src="images\caravan.jpg" alt="Caravan palace" width="100px"></dd>
+    <dd><img src="images/caravan.jpg" alt="Caravan palace" width="100"></dd>
     <dd><a href="https://www.caravanpalace.com/">Website</a></dd>
     <dt>Interstellar</dt>
-    <dd><img src="images\inter.jpg" alt="Interstellar" width="100px"></dd>
+    <dd><img src="images/inter.jpg" alt="Interstellar" width="100"></dd>
     <dd><a href="https://nl.wikipedia.org/wiki/Interstellar">Website</a></dd>
 </dl>
 </body>
