--- a/labo_4/index.html
+++ b/labo_4/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Index</title>
 </head>
 <body>
-
+<a href="opdracht_1.html">opdracht 1</a>
+<br>
+<a href="opdracht_2.html">opdracht 2</a>
+<br>
+<a href="opdracht_5/index.html">hoofdpagina</a>
 </body>
 </html>
