--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <a href="labo_3/index.html">labo 3</a>
 <br>
 <a href="labo_4/index.html">labo 4</a>
-
+<br>
+<a href="labo_5/index.html">labo 5</a>
 </body>
 </html>
