--- a/labo_5/index.html
+++ b/labo_5/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Index</title>
 </head>
 <body>
-
+<a href="opdracht_1.html">opdracht 1</a>
+<br>
+<a href="opdracht_3.html">opdracht 3</a>
+<br>
+<a href="opdracht_4.html">opdracht 4</a>
+<br>
+<a href="opdracht_6/index.html">opdracht 6</a>
+<br>
+<a href="opdracht_7.html">opdracht 7</a>
 </body>
 </html>
