--- a/labo_5/opdracht_4.html
+++ b/labo_5/opdracht_4.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Opdracht 4</title>
 </head>
 <body>
-
+<h2>Opdracht 4</h2>
+<h4>Welke verschillen zie je?</h4>
+<a>Ik vergelijk https://www.vives.be/nl/studeren en https://www.vives.be/nl/opleidingen</a>
+<br>
+<a>In het begin van het HTML code en einde zijn er weinig verschillen. In het midden is het anders.</a>
 </body>
 </html>
