--- a/labo_5/opdracht_7.html
+++ b/labo_5/opdracht_7.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Opdracht 7</title>
 </head>
 <body>
-
+<h2>Opdracht 7</h2>
+<h4>Welk van beide hoofdingen wordt volgens de CSS standaard het grootst weergegeven en waarom?</h4>
+<a>Hoofding h1 met de fontgrootte 2em. "em" hangt af van de waarde van de font-size van een font. "ex" hangt af van de hoogte van de kleine letters. In dit geval is de font-size groter dan de hoogte van de kleine letters.</a>
 </body>
 </html>
