--- a/labo_5/opdracht_6/index.html
+++ b/labo_5/opdracht_6/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Opdracht 6</title>
-    <link rel="stijl" href="styles/stijl.css">
+    <link rel="stylesheet" href="styles/stijl.css">
 </head>
 <body>
 <h1>Niveau 1</h1>
-<a>Tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst</a>
+<a class="a">Tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst</a>
 <br>
 <h2>Niveau 2</h2>
-<a>Tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst</a>
+<a class="b">Tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst</a>
 <br>
 <h3>Niveau 3</h3>
-<a>Tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst</a>
+<a class="c">Tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst tekst</a>
+<br>
+<a href="styles/stijl.css">CSS code</a>
 </body>
 </html>
