--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <a href="labo_4/index.html">labo 4</a>
 <br>
 <a href="labo_5/index.html">labo 5</a>
+<br>
+<a href="labo_6/index.html">labo 6</a>
 </body>
 </html>
