--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
 <a href="labo_5/index.html">labo 5</a>
 <br>
 <a href="labo_6/index.html">labo 6</a>
+<br>
+<a href="labo_7/index.html">labo 7</a>
 </body>
 </html>
