--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
 <a href="labo_6/index.html">labo 6</a>
 <br>
 <a href="labo_7/index.html">labo 7</a>
+<br>
+<a href="labo_8/index.html">labo 8</a>
 </body>
 </html>
