--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
 <a href="labo_7/index.html">labo 7</a>
 <br>
 <a href="labo_8/index.html">labo 8</a>
+<br>
+<a href="labo_9/index.html">labo 9</a>
 </body>
 </html>
