--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
 <a href="labo_8/index.html">labo 8</a>
 <br>
 <a href="labo_9/index.html">labo 9</a>
+<br>
+<a href="labo_10/index.html">labo 10</a>
 </body>
 </html>
