--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
 <a href="labo_9/index.html">labo 9</a>
 <br>
 <a href="labo_10/index.html">labo 10</a>
+<br>
+<a href="labo_11/index.html">labo 11</a>
 </body>
 </html>
