--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<a>Eerste semester</a>
+<br>
 <a href="labo_3/index.html">labo 3</a>
 <br>
 <a href="labo_4/index.html">labo 4</a>
@@ -22,5 +24,9 @@
 <a href="labo_10/index.html">labo 10</a>
 <br>
 <a href="labo_11/index.html">labo 11</a>
+<br>
+<a>Tweede semeseter</a>
+<br>
+<a href="labo_1_js/index.html">labo 1 js</a>
 </body>
 </html>
