--- a/index.html
+++ b/index.html
@@ -28,5 +28,7 @@
 <a>Tweede semeseter</a>
 <br>
 <a href="labo_1_js/index.html">labo 1 js</a>
+<br>
+<a href="labo_2_js/index.html">labo 2 js</a>
 </body>
 </html>
