--- a/index.html
+++ b/index.html
@@ -30,5 +30,7 @@
 <a href="labo_1_js/index.html">labo 1 js</a>
 <br>
 <a href="labo_2_js/index.html">labo 2 js</a>
+<br>
+<a href="labo_3_js/index.html">labo 3 js</a>
 </body>
 </html>
