--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@
 <a href="labo_2_js/index.html">labo 2 js</a>
 <br>
 <a href="labo_3_js/index.html">labo 3 js</a>
+<br>
+<a href="labo_4_js/index.html">labo 4 js</a>
 </body>
 </html>
