--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
 <a href="labo_3_js/index.html">labo 3 js</a>
 <br>
 <a href="labo_4_js/index.html">labo 4 js</a>
+<br>
+<a href="labo_5_js/index.html">labo 5 js</a>
 </body>
 </html>
