--- a/index.html
+++ b/index.html
@@ -2,39 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Voorpagina</title>
+    <link rel="stylesheet" href="styles/stijl.css">
 </head>
 <body>
-<a>Eerste semester</a>
-<br>
-<a href="labo_3/index.html">labo 3</a>
-<br>
-<a href="labo_4/index.html">labo 4</a>
-<br>
-<a href="labo_5/index.html">labo 5</a>
-<br>
-<a href="labo_6/index.html">labo 6</a>
-<br>
-<a href="labo_7/index.html">labo 7</a>
-<br>
-<a href="labo_8/index.html">labo 8</a>
-<br>
-<a href="labo_9/index.html">labo 9</a>
-<br>
-<a href="labo_10/index.html">labo 10</a>
-<br>
-<a href="labo_11/index.html">labo 11</a>
-<br>
-<a>Tweede semeseter</a>
-<br>
-<a href="labo_1_js/index.html">labo 1 js</a>
-<br>
-<a href="labo_2_js/index.html">labo 2 js</a>
-<br>
-<a href="labo_3_js/index.html">labo 3 js</a>
-<br>
-<a href="labo_4_js/index.html">labo 4 js</a>
-<br>
-<a href="labo_5_js/index.html">labo 5 js</a>
+<div class="header">
+    <h2>Abdurachman Tchopalov - Web Development</h2>
+</div>
+<div class="nav">
+    <a href="https://abdutchop.github.io/webdevelopment/">Homepage</a>
+</div>
+<div class="row">
+    <div class="column">
+        <p>Eerste semester</p>
+        <a href="labo_3/index.html">labo 3</a>
+        <a href="labo_4/index.html">labo 4</a>
+        <a href="labo_5/index.html">labo 5</a>
+        <a href="labo_6/index.html">labo 6</a>
+        <a href="labo_7/index.html">labo 7</a>
+        <a href="labo_8/index.html">labo 8</a>
+        <a href="labo_9/index.html">labo 9</a>
+        <a href="labo_10/index.html">labo 10</a>
+        <a href="labo_11/index.html">labo 11</a>
+    </div>
+    <div class="column">
+        <p>Tweede semeseter</p>
+        <a href="labo_1_js/index.html">labo 1 js</a>
+        <a href="labo_2_js/index.html">labo 2 js</a>
+        <a href="labo_3_js/index.html">labo 3 js</a>
+        <a href="labo_4_js/index.html">labo 4 js</a>
+        <a href="labo_5_js/index.html">labo 5 js</a>
+        <a href="labo_6_js/index.html">labo 6 js</a>
+    </div>
+</div>
 </body>
 </html>
