--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <a href="labo_4_js/index.html">labo 4 js</a>
         <a href="labo_5_js/index.html">labo 5 js</a>
         <a href="labo_6_js/index.html">labo 6 js</a>
+        <a href="labo_7_js/index.html">labo 7 js</a>
     </div>
 </div>
 </body>
