--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <a href="labo_5_js/index.html">labo 5 js</a>
         <a href="labo_6_js/index.html">labo 6 js</a>
         <a href="labo_7_js/index.html">labo 7 js</a>
+        <a href="labo_8_js/index.html">labo 8 js</a>
     </div>
 </div>
 </body>
