--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <a href="labo_6_js/index.html">labo 6 js</a>
         <a href="labo_7_js/index.html">labo 7 js</a>
         <a href="labo_8_js/index.html">labo 8 js</a>
+        <a href="les_10/index.html">Extra oefening 1</a>
     </div>
 </div>
 </body>
