--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
         <a href="labo_7_js/index.html">labo 7 js</a>
         <a href="labo_8_js/index.html">labo 8 js</a>
         <a href="les_10/index.html">Extra oefening 1</a>
+        <a href="les_11/index.html">Extra oefening 2</a>
     </div>
 </div>
+
+<script type="text/javascript" charset="utf-8" src="scripts/script.js"></script>
 </body>
 </html>
