--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </div>
 <div class="row">
     <div class="column">
-        <p>Eerste semester</p>
+        <div>
+            Eerste semester
+        </div>
         <a href="labo_3/index.html">labo 3</a>
         <a href="labo_4/index.html">labo 4</a>
         <a href="labo_5/index.html">labo 5</a>
@@ -26,7 +28,9 @@
         <a href="labo_11/index.html">labo 11</a>
     </div>
     <div class="column">
-        <p>Tweede semeseter</p>
+        <div>
+            Tweede semester
+        </div>
         <a href="labo_1_js/index.html">labo 1 js</a>
         <a href="labo_2_js/index.html">labo 2 js</a>
         <a href="labo_3_js/index.html">labo 3 js</a>
