--- a/labo_10/index.html
+++ b/labo_10/index.html
@@ -3,14 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="stylesheet" href="../styles/stijl.css">
 </head>
 <body>
-<a href="Begin_situatie_mediaQueries/oef1.html">opdracht 1</a>
-<br>
-<a href="beginsituatie_bootstrap5/index.html">opdracht 2.1</a>
-<br>
-<a href="opdracht modus/index.html">opdracht 2.2</a>
-<br>
-<a href="opdracht schilderij/index.html">opdracht schilderij</a>
+<div class="header">
+    <h2>Abdurachman Tchopalov - Web Development</h2>
+</div>
+<div class="nav">
+    <a href="https://abdutchop.github.io/webdevelopment/">Homepage</a>
+</div>
+<div class="row">
+    <div class="column">
+        <div>
+            Labo 10
+        </div>
+        <a href="Begin_situatie_mediaQueries/oef1.html">opdracht 1</a>
+        <a href="beginsituatie_bootstrap5/index.html">opdracht 2.1</a>
+        <a href="opdracht modus/index.html">opdracht 2.2</a>
+        <a href="opdracht schilderij/index.html">opdracht schilderij</a>
+    </div>
+</div>
 </body>
 </html>
