--- a/labo_11/index.html
+++ b/labo_11/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="stylesheet" href="../styles/stijl.css">
 </head>
 <body>
-<a href="Grid%20Exercises/index.html">opdracht 1-6</a>
-<br>
-<a href="Beginsituatie/index.html">extra oefening</a>
+<div class="header">
+    <h2>Abdurachman Tchopalov - Web Development</h2>
+</div>
+<div class="nav">
+    <a href="https://abdutchop.github.io/webdevelopment/">Homepage</a>
+</div>
+<div class="row">
+    <div class="column">
+        <div>
+            Labo 11
+        </div>
+        <a href="Grid%20Exercises/index.html">opdracht 1-6</a>
+        <a href="Beginsituatie/index.html">extra oefening</a>
+    </div>
+</div>
 </body>
 </html>
