--- a/labo_2_js/index.html
+++ b/labo_2_js/index.html
@@ -3,21 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="stylesheet" href="../styles/stijl.css">
 </head>
 <body>
-<a href="Opdracht Array/index.html">Opdracht Array</a>
-<br>
-<a href="Opdracht 1/index.html">Opdracht 1</a>
-<br>
-<a href="Opdracht 3/index.html">Opdracht 3</a>
-<br>
-<a href="Opdracht 4/index.html">Opdracht 4</a>
-<br>
-<a href="Opdracht 5/index.html">Opdracht 5</a>
-<br>
-<a href="Opdracht Kopieer/index.html">Opdracht Kopieer</a>
-<br>
-<a href="Opdracht Substring/index.html">Opdracht Substring</a>
+<div class="header">
+    <h2>Abdurachman Tchopalov - Web Development</h2>
+</div>
+<div class="nav">
+    <a href="https://abdutchop.github.io/webdevelopment/">Homepage</a>
+</div>
+<div class="row">
+    <div class="column">
+        <div>
+            Labo 2 JS
+        </div>
+        <a href="Opdracht Array/index.html">Opdracht Array</a>
+        <a href="Opdracht 1/index.html">Opdracht 1</a>
+        <a href="Opdracht 3/index.html">Opdracht 3</a>
+        <a href="Opdracht 4/index.html">Opdracht 4</a>
+        <a href="Opdracht 5/index.html">Opdracht 5</a>
+        <a href="Opdracht Kopieer/index.html">Opdracht Kopieer</a>
+        <a href="Opdracht Substring/index.html">Opdracht Substring</a>
+    </div>
+</div>
 <br>
 </body>
 </html>
