--- a/labo_3/index.html
+++ b/labo_3/index.html
@@ -3,13 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="../styles/stijl.css">
 </head>
 <body>
-<a href="contact/index.html">contact</a>
-<br>
-<a href="homepage/index.html">homepage</a>
-<br>
-<a href="opleidingsaanbod/index.html">opleidingsaanbod</a>
-
+<div class="header">
+    <h2>Abdurachman Tchopalov - Web Development</h2>
+</div>
+<div class="nav">
+    <a href="https://abdutchop.github.io/webdevelopment/">Homepage</a>
+</div>
+<div class="row">
+    <div class="column">
+        <div>
+            Labo 3
+        </div>
+        <a href="contact/index.html">contact</a>
+        <a href="homepage/index.html">homepage</a>
+        <a href="opleidingsaanbod/index.html">opleidingsaanbod</a>
+    </div>
+</div>
 </body>
 </html>
