--- a/labo_3_js/index.html
+++ b/labo_3_js/index.html
@@ -3,19 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="stylesheet" href="../styles/stijl.css">
 </head>
 <body>
-<a href="opdracht paragraaf/index.html">Opdracht Paragraaf</a>
-<br>
-<a href="opdracht 1/index.html">Opdracht 1</a>
-<br>
-<a href="opdracht 2/index.html">Opdracht 2</a>
-<br>
-<a href="opdracht 3/index.html">Opdracht 3</a>
-<br>
-<a href="opdracht colorpicker/index.html">Opdracht Colorpicker</a>
-<br>
-<a href="opdracht producten/index.html">Opdracht Producten</a>
+<div class="header">
+    <h2>Abdurachman Tchopalov - Web Development</h2>
+</div>
+<div class="nav">
+    <a href="https://abdutchop.github.io/webdevelopment/">Homepage</a>
+</div>
+<div class="row">
+    <div class="column">
+        <div>
+            Labo 3 JS
+        </div>
+        <a href="opdracht paragraaf/index.html">Opdracht Paragraaf</a>
+        <a href="opdracht 1/index.html">Opdracht 1</a>
+        <a href="opdracht 2/index.html">Opdracht 2</a>
+        <a href="opdracht 3/index.html">Opdracht 3</a>
+        <a href="opdracht colorpicker/index.html">Opdracht Colorpicker</a>
+        <a href="opdracht producten/index.html">Opdracht Producten</a>
+    </div>
+</div>
 <br>
 </body>
 </html>
