--- a/labo_4/index.html
+++ b/labo_4/index.html
@@ -3,12 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="stylesheet" href="../styles/stijl.css">
 </head>
 <body>
-<a href="opdracht_1.html">opdracht 1</a>
-<br>
-<a href="opdracht_2.html">opdracht 2</a>
-<br>
-<a href="opdracht_5/index.html">hoofdpagina</a>
+<div class="header">
+    <h2>Abdurachman Tchopalov - Web Development</h2>
+</div>
+<div class="nav">
+    <a href="https://abdutchop.github.io/webdevelopment/">Homepage</a>
+</div>
+<div class="row">
+    <div class="column">
+        <div>
+            Labo 4
+        </div>
+        <a href="opdracht_1.html">opdracht 1</a>
+        <a href="opdracht_2.html">opdracht 2</a>
+        <a href="opdracht_5/index.html">hoofdpagina</a>
+    </div>
+</div>
 </body>
 </html>
