--- a/labo_4_js/index.html
+++ b/labo_4_js/index.html
@@ -3,14 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="stylesheet" href="../styles/stijl.css">
 </head>
 <body>
-<a href="opdracht formulier/formulierElementen.html">Opdracht Formulier</a>
-<br>
-<a href="opdracht strings/opdracht strings.html">Opdracht Strings</a>
-<br>
-<a href="opdracht spaties op console/opdracht spaties op console.html">Opdracht Spaties Op Console</a>
-<br>
-<a href="opdracht man van an/index.html">Opdracht Man Van An</a>
+<div class="header">
+    <h2>Abdurachman Tchopalov - Web Development</h2>
+</div>
+<div class="nav">
+    <a href="https://abdutchop.github.io/webdevelopment/">Homepage</a>
+</div>
+<div class="row">
+    <div class="column">
+        <div>
+            Labo 4 JS
+        </div>
+        <a href="opdracht formulier/formulierElementen.html">Opdracht Formulier</a>
+        <a href="opdracht strings/opdracht strings.html">Opdracht Strings</a>
+        <a href="opdracht spaties op console/opdracht spaties op console.html">Opdracht Spaties Op Console</a>
+        <a href="opdracht man van an/index.html">Opdracht Man Van An</a>
+    </div>
+</div>
 </body>
 </html>
