--- a/labo_5_js/index.html
+++ b/labo_5_js/index.html
@@ -3,16 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="stylesheet" href="../styles/stijl.css">
 </head>
 <body>
-<a href="opdracht%20trigrams/index.html">opdracht trigrams</a>
-<br>
-<a href="opdracht%20de%20en%20het/index.html">opdracht de en het</a>
-<br>
-<a href="opdracht%20gemeenten/index.html">opdracht gemeenten</a>
-<br>
-<a href="opdracht%20formwaarden/index.html">opdracht formwaarden</a>
-<br>
-<a href="opdracht%20formvalidatie/index.html">opdracht formvalidatie</a>
+<div class="header">
+    <h2>Abdurachman Tchopalov - Web Development</h2>
+</div>
+<div class="nav">
+    <a href="https://abdutchop.github.io/webdevelopment/">Homepage</a>
+</div>
+<div class="row">
+    <div class="column">
+        <div>
+            Labo 5 JS
+        </div>
+        <a href="opdracht%20trigrams/index.html">opdracht trigrams</a>
+        <a href="opdracht%20de%20en%20het/index.html">opdracht de en het</a>
+        <a href="opdracht%20gemeenten/index.html">opdracht gemeenten</a>
+        <a href="opdracht%20formwaarden/index.html">opdracht formwaarden</a>
+        <a href="opdracht%20formvalidatie/index.html">opdracht formvalidatie</a>
+    </div>
+</div>
 </body>
 </html>
