--- a/labo_6_js/index.html
+++ b/labo_6_js/index.html
@@ -3,14 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="stylesheet" href="../styles/stijl.css">
 </head>
 <body>
-<a href="opdracht%20colorpicker%20uitbreiding/index.html">opdracht colorpicker uitbreiding</a>
-<br>
-<a href="opdracht%20extra%20oefeningen%20nodes/index.html">opdracht nodes 1</a>
-<br>
-<a href="opdracht%20extra%20oefeningen%20nodes%202/index.html">opdracht nodes 2</a>
-<br>
-<a href="opdracht%20extra%20oefeningen%20nodes%203/index.html">opdracht nodes 3</a>
+<div class="header">
+    <h2>Abdurachman Tchopalov - Web Development</h2>
+</div>
+<div class="nav">
+    <a href="https://abdutchop.github.io/webdevelopment/">Homepage</a>
+</div>
+<div class="row">
+    <div class="column">
+        <div>
+            Labo 6 JS
+        </div>
+        <a href="opdracht%20colorpicker%20uitbreiding/index.html">opdracht colorpicker uitbreiding</a>
+        <a href="opdracht%20extra%20oefeningen%20nodes/index.html">opdracht nodes 1</a>
+        <a href="opdracht%20extra%20oefeningen%20nodes%202/index.html">opdracht nodes 2</a>
+        <a href="opdracht%20extra%20oefeningen%20nodes%203/index.html">opdracht nodes 3</a>
+    </div>
+</div>
 </body>
 </html>
