--- a/labo_7_js/index.html
+++ b/labo_7_js/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="stylesheet" href="../styles/stijl.css">
 </head>
 <body>
-<a href="opdracht%20hit%20an%20object/index.html">opdracht hit an object</a>
-<br>
-<a href="opdracht%20memory/index.html">opdracht memory</a>
+<div class="header">
+    <h2>Abdurachman Tchopalov - Web Development</h2>
+</div>
+<div class="nav">
+    <a href="https://abdutchop.github.io/webdevelopment/">Homepage</a>
+</div>
+<div class="row">
+    <div class="column">
+        <div>
+            Labo 7 JS
+        </div>
+        <a href="opdracht%20hit%20an%20object/index.html">opdracht hit an object</a>
+        <a href="opdracht%20memory/index.html">opdracht memory</a>
+    </div>
+</div>
 </body>
 </html>
