--- a/labo_8_js/index.html
+++ b/labo_8_js/index.html
@@ -3,12 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="stylesheet" href="../styles/stijl.css">
 </head>
 <body>
-<a href="opdracht%20datum/index.html">opdracht datum</a>
-<br>
-<a href="opdracht%20twee/index.html">opdracht twee</a>
-<br>
-<a href="start%20contact%20manager%20opdracht/index.html">opdracht start contact manager</a>
+<div class="header">
+    <h2>Abdurachman Tchopalov - Web Development</h2>
+</div>
+<div class="nav">
+    <a href="https://abdutchop.github.io/webdevelopment/">Homepage</a>
+</div>
+<div class="row">
+    <div class="column">
+        <div>
+            Labo 8 JS
+        </div>
+        <a href="opdracht%20datum/index.html">opdracht datum</a>
+        <a href="opdracht%20twee/index.html">opdracht twee</a>
+        <a href="start%20contact%20manager%20opdracht/index.html">opdracht start contact manager</a>
+    </div>
+</div>
 </body>
 </html>
