--- a/labo_9/index.html
+++ b/labo_9/index.html
@@ -3,10 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <title>Index</title>
+  <link rel="stylesheet" href="../styles/stijl.css">
 </head>
 <body>
-<a href="opdracht airbus/airbus.html">opdracht airbus</a>
-<br>
-<a href="positioneren_image_begin/index.html">opdracht positioneren</a>
+<div class="header">
+  <h2>Abdurachman Tchopalov - Web Development</h2>
+</div>
+<div class="nav">
+  <a href="https://abdutchop.github.io/webdevelopment/">Homepage</a>
+</div>
+<div class="row">
+  <div class="column">
+    <div>
+      Labo 9
+    </div>
+    <a href="opdracht airbus/airbus.html">opdracht airbus</a>
+    <a href="positioneren_image_begin/index.html">opdracht positioneren</a>
+  </div>
+</div>
 </body>
 </html>
