--- a/labo_6/index.html
+++ b/labo_6/index.html
@@ -3,16 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="stylesheet" href="../styles/stijl.css">
 </head>
 <body>
-<a href="opdracht_1/opdracht_1.html">opdracht 1</a>
-<br>
-<a href="opdracht_3/opdracht_3.html">opdracht 3</a>
-<br>
-<a href="opdracht_4/opdracht_4.html">opdracht 4</a>
-<br>
-<a href="opdracht_5/opdracht_5.html">opdracht 5</a>
-<br>
-<a href="opdracht_6/opdracht_6.html">opdracht 6</a>
+<div class="header">
+    <h2>Abdurachman Tchopalov - Web Development</h2>
+</div>
+<div class="nav">
+    <a href="https://abdutchop.github.io/webdevelopment/">Homepage</a>
+</div>
+<div class="row">
+    <div class="column">
+        <div>
+            Labo 6
+        </div>
+        <a href="opdracht_1/opdracht_1.html">opdracht 1</a>
+        <a href="opdracht_3/opdracht_3.html">opdracht 3</a>
+        <a href="opdracht_4/opdracht_4.html">opdracht 4</a>
+        <a href="opdracht_5/opdracht_5.html">opdracht 5</a>
+        <a href="opdracht_6/opdracht_6.html">opdracht 6</a>
+    </div>
+</div>
 </body>
 </html>
