--- a/labo_7/index.html
+++ b/labo_7/index.html
@@ -3,12 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="stylesheet" href="../styles/stijl.css">
 </head>
 <body>
-<a href="opdracht_Nature_Blog/index.html">opdracht nature blog</a>
-<br>
-<a href="opdracht_Persoonlijke_homepagina_met_CSS/index.html">opdracht homepagina</a>
-<br>
-<a href="opdracht_Kalender/index.html">opdracht kalender</a>
+<div class="header">
+    <h2>Abdurachman Tchopalov - Web Development</h2>
+</div>
+<div class="nav">
+    <a href="https://abdutchop.github.io/webdevelopment/">Homepage</a>
+</div>
+<div class="row">
+    <div class="column">
+        <div>
+            Labo 7
+        </div>
+        <a href="opdracht_Nature_Blog/index.html">opdracht nature blog</a>
+        <a href="opdracht_Persoonlijke_homepagina_met_CSS/index.html">opdracht homepagina</a>
+        <a href="opdracht_Kalender/index.html">opdracht kalender</a>
+    </div>
+</div>
 </body>
 </html>
