--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a href="les_11/index.html">Extra oefening 2</a>
     </div>
 </div>
-
+<audio id="au" preload="auto" src="audio/welcome.mp3"></audio>
 <script type="text/javascript" charset="utf-8" src="scripts/script.js"></script>
 </body>
 </html>
